--- a/weather_forecast/static/weather_forecast/css/style.css
+++ b/weather_forecast/static/weather_forecast/css/style.css
@@ -1,218 +1,221 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  font-family: sans-serif;
 }
-  
-body{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(img/bg.jpg);
-    background-size: fill;
+
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../images/bg.jpg);
+  background-size: fill;
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #fa5757;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .header-title {
-    color: #fff;
-    font-size: 24px;
-    margin: 0;
-  }
-  
-
-.container{
-    width: 400px;
-    height: min-content;
-    background-color: #fff;
-    border-radius: 12px;
-    padding: 28px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fa5757;
+  padding: 20px;
+  text-align: center;
 }
 
-.search-box{
-    width: 100%;
-    height: min-content;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header-title {
+  color: #fff;
+  font-size: 24px;
+  margin: 0;
 }
 
-.search-box input{
-    width: 84%;
-    font-size: 20px;
-    text-transform: capitalize;
-    color: #000;
-    background-color: #b6e0f3;
-    padding: 12px 16px;
-    border-radius: 14px;
+
+.container {
+  width: 400px;
+  height: min-content;
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 28px;
 }
 
-.search-box input::placeholder{
-    color: #000;
+.search-box {
+  width: 100%;
+  height: min-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.search-box button{
-    width: 46px;
-    height: 46px;
-    background-color: #b6e0f3;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 20px;
+.search-box input {
+  width: 84%;
+  font-size: 20px;
+  text-transform: capitalize;
+  color: #000;
+  background-color: #b6e0f3;
+  padding: 12px 16px;
+  border-radius: 14px;
 }
 
-.search-box button:hover{
-    color: #000000;
-    background-color: #ababab;
+.search-box input::placeholder {
+  color: #000;
 }
 
-.weather-body{
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-block: 20px;
-    display: none;
-}
-.weather-body img{
-    width: 60%;
+.search-box button {
+  width: 46px;
+  height: 46px;
+  background-color: #b6e0f3;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 20px;
 }
 
-.weather-box{
-    margin-block: 20px;
-    text-align: center;
+.search-box button:hover {
+  color: #000000;
+  background-color: #ababab;
 }
 
-.weather-box .temperature{
-    font-size: 40px;
-    font-weight: 800;
-    position: relative;
+.weather-body {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-block: 20px;
+  display: none;
 }
 
-.weather-box .temperature sup{
-    font-size: 20px;
-    position: absolute;
-    font-weight: 600;
+.weather-body img {
+  width: 60%;
 }
 
-.weather-box .description{
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: capitalize;
+.weather-box {
+  margin-block: 20px;
+  text-align: center;
 }
 
-.weather-details{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
+.weather-box .temperature {
+  font-size: 40px;
+  font-weight: 800;
+  position: relative;
 }
 
-.humidity, .wind{
-    display: flex;
-    align-items: center;
+.weather-box .temperature sup {
+  font-size: 20px;
+  position: absolute;
+  font-weight: 600;
 }
 
-.humidity{
-    margin-left: 20px;
+.weather-box .description {
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
-.wind{
-    margin-right: 20px;
+.weather-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
-.weather-details i{
-    font-size: 36px;
+.humidity,
+.wind {
+  display: flex;
+  align-items: center;
 }
 
-.weather-details .text{
-    margin-left: 10px;
-    font-size: 16px;
+.humidity {
+  margin-left: 20px;
 }
 
-.text span{
-    font-size: 20px;
-    font-weight: 700;
+.wind {
+  margin-right: 20px;
 }
 
-.location-not-found{
-    margin-top: 20px;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.weather-details i {
+  font-size: 36px;
 }
 
-.location-not-found h1{
-    font-size: 20px;
-    color: #6b6b6b;
-    margin-block-end: 15px;
+.weather-details .text {
+  margin-left: 10px;
+  font-size: 16px;
 }
-.location-not-found img{
-    width: 80%;
+
+.text span {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.location-not-found {
+  margin-top: 20px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.location-not-found h1 {
+  font-size: 20px;
+  color: #6b6b6b;
+  margin-block-end: 15px;
+}
+
+.location-not-found img {
+  width: 80%;
 }
 
 .footer {
-    background-color: #c5bfbf;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .footer-text {
-    color: #fff;
-    font-size: 14px;
-    margin: 0;
+  background-color: #c5bfbf;
+  padding: 10px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.footer-text {
+  color: #fff;
+  font-size: 14px;
+  margin: 0;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .container {
+    width: 90%;
+    padding: 20px;
   }
 
-  @media only screen and (min-width: 320px) and (max-width: 480px) {
-    .container {
-      width: 90%;
-      padding: 20px;
-    }
-  
-    .header-title {
-      font-size: 20px;
-    }
-  
-    .search-box input {
-      font-size: 16px;
-    }
-  
-    .search-box button {
-      font-size: 18px;
-    }
-  
-    .weather-box .temperature {
-      font-size: 32px;
-    }
-  
-    .weather-box .temperature sup {
-      font-size: 16px;
-    }
-  
-    .weather-box .description {
-      font-size: 16px;
-    }
-  
-    .weather-details .text {
-      font-size: 14px;
-    }
-  
-    .footer-text {
-      font-size: 12px;
-    }
+  .header-title {
+    font-size: 20px;
   }
+
+  .search-box input {
+    font-size: 16px;
+  }
+
+  .search-box button {
+    font-size: 18px;
+  }
+
+  .weather-box .temperature {
+    font-size: 32px;
+  }
+
+  .weather-box .temperature sup {
+    font-size: 16px;
+  }
+
+  .weather-box .description {
+    font-size: 16px;
+  }
+
+  .weather-details .text {
+    font-size: 14px;
+  }
+
+  .footer-text {
+    font-size: 12px;
+  }
+}
